2006-08-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcvs-parse.el (cvs-parse-table): Accept the new `...' format for
	removed files.

2006-08-17  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-locals-watch-map)
	(gdb-locals-watch-map-1): Suppress keymap first.
	(gdb-edit-locals-map-1): New variable.
	(gdb-edit-locals-value): New function.
	(gdb-stack-list-locals-handler): Use them.

2006-08-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mouse.el (global-map): Allow yanking with mouse-2 at a spot whose
	cursor would normally be drawn in the fringe.

	* font-lock.el (font-lock-extend-region-wholelines): Fix up typo.
	Reported by Martin Rudalics <rudalics@gmx.at>.

2006-08-16  Richard Stallman  <rms@gnu.org>

	* term/x-win.el (x-clipboard-yank): Specify * in interactive spec.
	(special-event-map): Process drag-n-drop events this way.

	* simple.el (move-beginning-of-line): Test whether fields
	would prevent motion back to line's first visible character.
	If so, stop where the fields would stop the motion.

	* newcomment.el (comment-indent): Fully update INDENT
	before checking to see if it will change the text.

	* cus-edit.el (custom-newline): New function.
	(custom-mode-map): Bind newline to custom-newline.

	* compare-w.el (compare-windows): Factor compare-ignore-whitespace
	into ignore-whitespace.
	Check each buffer for its skip-function.
	Handle compare-windows-skip-whitespace special-case test
	by returning t from default skip function.

2006-08-15  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-clock-special-range)
	(org-clock-update-time-maybe): New functions.
	(org-stamp-time-of-day-regexp): Allow weekday to be of word chars,
	not only a-z.
	(org-agenda-get-blocks): Allow multiple blocks per headline.
	(org-timestamp-change): Call `org-clock-update-time-maybe'.
	(org-export-html-title-format)
	(org-export-html-toplevel-hlevel): New options.
	(org-export-language-setup): Add support for Czech.